--- a/md/cnx.mdx
+++ b/md/cnx.mdx
@@ -94,7 +94,7 @@ cnx(Boolean, Object, undefined, null, "", 0, NaN);
 ## Merge class tailwind-merge
 
 ```ts
-import { cnx, type cnxValues } from "cretex";
+import { cnx, type cnxValues } from "xuxi";
 import { twMerge } from "tailwind-merge";
 
 export function cn(...merge: cnxValues[]): string {
