--- a/md/cvx.mdx
+++ b/md/cvx.mdx
@@ -37,7 +37,7 @@ cvx({
 ## Example Usage
 
 ```tsx
-import { cvx, type cvxProps } from "cretex";
+import { cvx, type cvxProps } from "xuxi";
 
 const classes = cvx({
   // assign values that is definitely returned
