--- a/md/index.mdx
+++ b/md/index.mdx
@@ -1,25 +1,25 @@
 ---
-title: Cretex - The Ultimate Utility for Dynamic Data Management
+title: Xuxi - The Ultimate Utility for Dynamic Data Management
 date: 2025-02-03
 ---
 
 <div align="center">
-  <img src="https://raw.githubusercontent.com/ilkhoeri/cretex/c49a661ab84bf2f9cdf4fed2d2f4016361135362/logo.svg" width="200px" align="center" alt="Cretex logo" />
+  <img src="https://raw.githubusercontent.com/ilkhoeri/xuxi/e0667835d62fcbf1f2e216dbb79ecf28565c571c/logo.svg" width="200px" align="center" alt="Xuxi logo" />
 </div>
 
 <br />
 
-# **Welcome to Cretex**
+# **Welcome to CXuxiretex**
 
-**Cretex** is a powerful and flexible utility designed to simplify dynamic data management. Whether you're working with **API responses**, **complex serialization**, **dynamic styles**, or **structured data merging**, Cretex provides an efficient and elegant solution.
+**Xuxi** is a powerful and flexible utility designed to simplify dynamic data management. Whether you're working with **API responses**, **complex serialization**, **dynamic styles**, or **structured data merging**, Xuxi provides an efficient and elegant solution.
 
-Built with performance and scalability in mind, Cretex supports **ESM**, **CJS**, and **modern JavaScript environments**, making it highly versatile for both **frontend and backend** applications.
+Built with performance and scalability in mind, Xuxi supports **ESM**, **CJS**, and **modern JavaScript environments**, making it highly versatile for both **frontend and backend** applications.
 
 ---
 
-## **Why Cretex?**
+## **Why Xuxi?**
 
-Modern applications require a highly flexible and efficient way to handle structured data dynamically. Cretex is designed to address these challenges with:
+Modern applications require a highly flexible and efficient way to handle structured data dynamically. Xuxi is designed to address these challenges with:
 
 - **Efficient API Response Handling** - Combine, clean, and structure API responses seamlessly.
 - **Advanced Data Serialization** - Process deeply nested objects without complexity.
@@ -34,7 +34,7 @@ Modern applications require a highly flexible and efficient way to handle struct
 
 ### **ocx - Object Combination with Chaining**
 
-Cretex provides a powerful object merging utility with a **chaining mechanism** for advanced configurations.
+Xuxi provides a powerful object merging utility with a **chaining mechanism** for advanced configurations.
 
 ```ts
 function ocx<T extends ocxKey>(...obj: ocxObj<T>[]): ocxAcc<T>;
@@ -68,10 +68,10 @@ function cvx<T extends cvxKeys>(keys: cvxRecord<T>): (result?: cvxResult<T>) => 
 
 ## **Getting Started**
 
-To start using Cretex, follow the [installation guide](./installation) and explore the documentation to learn about its powerful features.
+To start using Xuxi, follow the [installation guide](./installation) and explore the documentation to learn about its powerful features.
 
 ```bash
-npm install cretex
+npm install xuxi
 ```
 
 For detailed API references and real-world examples, visit the [Documentation](./started).
@@ -80,7 +80,7 @@ For detailed API references and real-world examples, visit the [Documentation](.
 
 ## **Built for Modern Development**
 
-Cretex is compiled with **ES2020**, **ESNext**, and **DOM** support, making it suitable for modern JavaScript and TypeScript applications. It works seamlessly in:
+Xuxi is compiled with **ES2020**, **ESNext**, and **DOM** support, making it suitable for modern JavaScript and TypeScript applications. It works seamlessly in:
 
 - **Node.js** (CJS & ESM support)
 - **Browser environments** (via CDN or bundlers)
@@ -92,11 +92,11 @@ Cretex is compiled with **ES2020**, **ESNext**, and **DOM** support, making it s
 
 ## **Join the Community**
 
-Cretex is an **open-source** project, and we encourage contributions from the community! Join the discussion, contribute to the codebase, or share your feedback:
+Xuxi is an **open-source** project, and we encourage contributions from the community! Join the discussion, contribute to the codebase, or share your feedback:
 
-- 🌐 [GitHub Repository](https://github.com/ilkhoeri/cretex)
-- 💬 [Discussions](https://github.com/ilkhoeri/cretex/discussions)
+- 🌐 [GitHub Repository](https://github.com/ilkhoeri/xuxi)
+- 💬 [Discussions](https://github.com/ilkhoeri/xuxi/discussions)
 - 🐦 [Twitter](https://twitter.com/ilkhoeri)
-- 📦 [NPM Package](https://www.npmjs.com/package/cretex)
+- 📦 [NPM Package](https://www.npmjs.com/package/xuxi)
 
 Together, let's make data management more **efficient**, **clean**, and **powerful**. 🚀
