--- a/md/installation.mdx
+++ b/md/installation.mdx
@@ -5,18 +5,18 @@ date: 2025-02-03
 
 # **Installation**
 
-**Find `cretex` on:**
+**Find `xuxi` on:**
 
-[![NPM](https://img.shields.io/npm/v/cretex.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/cretex)
-[![JSR](https://jsr.io/badges/@cretex/dynamic?label=jsr)](https://jsr.io/@cretex/dynamic)
-[![DENO](https://img.shields.io/npm/v/cretex.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/cretex)
-[![jsdelivr](https://img.shields.io/npm/v/cretex.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/cretex)
+[![NPM](https://img.shields.io/npm/v/xuxi.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/xuxi)
+[![JSR](https://jsr.io/badges/@xuxi/xuxi?label=jsr)](https://jsr.io/@xuxi/xuxi)
+[![DENO](https://img.shields.io/npm/v/xuxi.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/xuxi)
+[![jsdelivr](https://img.shields.io/npm/v/xuxi.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/xuxi)
 
 ---
 
 ## **Requirements**
 
-Before installing `cretex`, make sure your environment meets the following requirements:
+Before installing `xuxi`, make sure your environment meets the following requirements:
 
 - **TypeScript `4.5+`** (Recommended for type safety and best performance).
 - **Enable `strict` mode** in your `tsconfig.json` (Best practice for TypeScript projects).
@@ -37,38 +37,38 @@ Modify your **`tsconfig.json`** to enable strict mode:
 
 ## **Install via Package Managers**
 
-To install `cretex` in your project, use one of the following package managers:
+To install `xuxi` in your project, use one of the following package managers:
 
 ```bash
-npm install cretex
+npm install xuxi
 ```
 
 ---
 
 ## **Using a CDN**
 
-For quick usage in the browser without installing dependencies, you can include `cretex` from a CDN:
+For quick usage in the browser without installing dependencies, you can include `xuxi` from a CDN:
 
 ### **UMD (Global Script)**
 
 ```html
 <!-- Load the minified version from jsDelivr -->
-<script src="https://cdn.jsdelivr.net/npm/cretex@latest/lib/index.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/xuxi@latest/lib/index.min.js"></script>
 ```
 
 ### **ESM (Module Import)**
 
 ```html
 <script type="module">
-  import cretex from "https://cdn.jsdelivr.net/npm/cretex@latest/+esm";
+  import xuxi from "https://cdn.jsdelivr.net/npm/xuxi@latest/+esm";
 </script>
 ```
 
 **Note:**
 
-- The **UMD version** loads `cretex` as a global variable.
+- The **UMD version** loads `xuxi` as a global variable.
 - The **ESM version** allows importing as a module in modern browsers.
 
 ---
 
-Now you are ready to start using **Cretex**! 🚀
+Now you are ready to start using **xuxi**! 🚀
