--- a/md/license.mdx
+++ b/md/license.mdx
@@ -29,4 +29,4 @@ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 SOFTWARE.
 ```
 
-[![© LICENSE](https://img.shields.io/github/license/ilkhoeri/cretex)](https://github.com/ilkhoeri/cretex?tab=MIT-1-ov-file)
+[![© LICENSE](https://img.shields.io/github/license/ilkhoeri/xuxi)](https://github.com/ilkhoeri/xuxi?tab=MIT-1-ov-file)
