--- a/md/links.mdx
+++ b/md/links.mdx
@@ -5,13 +5,13 @@ date: 2025-02-02
 
 # **Links**
 
-[![Cretex CI status](https://github.com/ilkhoeri/cretex/actions/workflows/test.yml/badge.svg?event=push&branch=main)](https://github.com/ilkhoeri/cretex/actions?query=branch%3Amain)
+[![Xuxi CI status](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml/badge.svg?event=push&branch=main)](https://github.com/ilkhoeri/xuxi/actions?query=branch%3Amain)
 
-[![License](https://img.shields.io/github/license/ilkhoeri/cretex)](https://opensource.org/licenses/MIT)
+[![License](https://img.shields.io/github/license/ilkhoeri/xuxi)](https://opensource.org/licenses/MIT)
 
-[![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/cretex)
+[![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/xuxi)
 
-[![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/cretex/issues/new)
+[![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/xuxi/issues/new)
 
 [![Changelog](https://img.shields.io/badge/Changelog-green.svg?label=%F0%9F%93%91)](/changelog)
 
