--- a/md/meta.mdx
+++ b/md/meta.mdx
@@ -6,39 +6,39 @@ date: 2025-02-02
 # **Meta**
 
 <div align="center">
-  <img src="https://raw.githubusercontent.com/ilkhoeri/cretex/c49a661ab84bf2f9cdf4fed2d2f4016361135362/logo.svg" width="200px" align="center" alt="Cretex logo" />
+  <img src="https://raw.githubusercontent.com/ilkhoeri/xuxi/e0667835d62fcbf1f2e216dbb79ecf28565c571c/logo.svg" width="200px" align="center" alt="Xuxi logo" />
   <h1 align="center">
-    <b>Cretex</b>
+    <b>Xuxi</b>
   </h1>
 </div>
 
 ## **Documentation**
 
-[![Documentation](https://img.shields.io/badge/Docs-3b3b3b.svg?logo=github)](https://ilkhoeri.github.io/cretex/)
-[![jsdelivr](https://img.shields.io/jsdelivr/npm/hm/cretex?logo=jsdelivr)](https://www.jsdelivr.com/package/npm/cretex)
+[![Documentation](https://img.shields.io/badge/Docs-3b3b3b.svg?logo=github)](https://ilkhoeri.github.io/xuxi/)
+[![jsdelivr](https://img.shields.io/jsdelivr/npm/hm/xuxi?logo=jsdelivr)](https://www.jsdelivr.com/package/npm/xuxi)
 
 ## **Repository**
 
-[![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/cretex)
-[![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/cretex/issues/new)
+[![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/xuxi)
+[![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/xuxi/issues/new)
 [![Changelog](https://img.shields.io/badge/Changelog-green.svg?label=%F0%9F%93%91)](/changelog)
-[![License](https://img.shields.io/github/license/ilkhoeri/cretex)](https://opensource.org/licenses/MIT)
+[![License](https://img.shields.io/github/license/ilkhoeri/xuxi)](https://opensource.org/licenses/MIT)
 
 ## **Installation**
 
-[![NPM](https://img.shields.io/npm/v/cretex.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/cretex)
-[![JSR](https://jsr.io/badges/@cretex/dynamic?label=jsr)](https://jsr.io/@cretex/dynamic)
-[![DENO](https://img.shields.io/npm/v/cretex.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/cretex)
-[![jsdelivr](https://img.shields.io/npm/v/cretex.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/cretex)
+[![NPM](https://img.shields.io/npm/v/xuxi.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/xuxi)
+[![JSR](https://jsr.io/badges/@xuxi/xuxi?label=jsr)](https://jsr.io/@xuxi/xuxi)
+[![DENO](https://img.shields.io/npm/v/xuxi.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/xuxi)
+[![jsdelivr](https://img.shields.io/npm/v/xuxi.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/xuxi)
 
 ## **Bundles**
 
-[![min](https://badgen.net/bundlephobia/min/cretex)](https://bundlephobia.com/package/cretex)
-[![minzip](https://badgen.net/bundlephobia/minzip/cretex)](https://bundlephobia.com/package/cretex)
-[![dependency-count](https://badgen.net/bundlephobia/dependency-count/cretex)](https://bundlephobia.com/package/cretex)
-[![tree-shaking](https://badgen.net/bundlephobia/tree-shaking/cretex)](https://bundlephobia.com/package/cretex)
+[![min](https://badgen.net/bundlephobia/min/xuxi)](https://bundlephobia.com/package/xuxi)
+[![minzip](https://badgen.net/bundlephobia/minzip/xuxi)](https://bundlephobia.com/package/xuxi)
+[![dependency-count](https://badgen.net/bundlephobia/dependency-count/xuxi)](https://bundlephobia.com/package/xuxi)
+[![tree-shaking](https://badgen.net/bundlephobia/tree-shaking/xuxi)](https://bundlephobia.com/package/xuxi)
 
 ## **Score and Test**
 
-[![JSR Score](https://jsr.io/badges/@cretex/dynamic/score?label=score)](https://jsr.io/@cretex/dynamic)
-[![test](https://github.com/ilkhoeri/cretex/actions/workflows/test.yml/badge.svg)](https://github.com/ilkhoeri/cretex/actions/workflows/test.yml)
+[![JSR Score](https://jsr.io/badges/@xuxi/xuxi/score?label=score)](https://jsr.io/@xuxi/xuxi)
+[![test](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml/badge.svg)](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml)
