--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -1,6 +1,6 @@
 ---
 title: Table of Contents
-date: 2025-02-06
+date: 2025-05-05
 ---
 
 # Table of Contents
@@ -9,15 +9,15 @@ date: 2025-02-06
 
 - [**Getting Started**](/started#getting-started)
   - [Introduction](/started#introduction)
-    - [What Cretex can do](/started#what-cretex-can-do)
-    - [How Can Cretex Help You](/started#how-can-cretex-help-you)
-  - [Why Use Cretex](/started#why-use-cretex)
+    - [What Xuxi can do](/started#what-xuxi-can-do)
+    - [How Can Xuxi Help You](/started#how-can-xuxi-help-you)
+  - [Why Use Xuxi](/started#why-use-xuxi)
     - [Versatile & Dynamic](/started#-versatile-dynamic)
     - [Optimized & Efficient](/started#-optimized-efficient)
     - [Universal Compatibility](/started#-universal-compatibility)
     - [Simple API, Powerful Features](/started#-simple-api-powerful-features)
   - [Core Features](/started#core-features)
-    - [Cretex Built for Modern Development](/started#cretex-built-for-modern-development)
+    - [Xuxi Built for Modern Development](/started#xuxi-built-for-modern-development)
 - [**Installation**](/installation#installation)
   - [Requirements](/installation#requirements)
     - [TypeScript Configuration](/installation#typescript-configuration)
@@ -78,9 +78,9 @@ date: 2025-02-06
 - [**Types**](/types#types)
   - [InferType](/types#infertype)
     - [Syntax](/types#syntax)
-    - [How inferType Works](/types#how-infertype-works)
+    - [How InferType Works](/types#how-infertype-works)
     - [Example Usage](/types#example-usage)
-    - [When to Use inferType](/types#when-to-use-infertype)
+    - [When to Use InferType](/types#when-to-use-infertype)
 - [**Meta**](/meta#meta)
   - [Documentation](/meta#documentation)
   - [Repository](/meta#repository)
