--- a/md/coc.mdx
+++ b/md/coc.mdx
@@ -1,13 +1,13 @@
 ---
 title: Code of Conduct
-date: 2025-02-06
+date: 2025-05-05
 ---
 
 # Contributor Covenant Code of Conduct
 
 ## Our Pledge
 
-We, as members, contributors, and leaders of the **cretex** project, pledge to make participation in our community a harassment-free, collaborative, and uplifting experience for everyone, regardless of age, body size, visible or invisible disability, ethnicity, level of experience, education, socio-economic status, nationality, personal appearance, race and religion.
+We, as members, contributors, and leaders of the **xuxi** project, pledge to make participation in our community a harassment-free, collaborative, and uplifting experience for everyone, regardless of age, body size, visible or invisible disability, ethnicity, level of experience, education, socio-economic status, nationality, personal appearance, race and religion.
 
 We are committed to building tools that empower developers to create exceptional applications while fostering a positive, respectful, and inclusive community.
 
@@ -84,7 +84,7 @@ For answers to common questions about this Code of Conduct, see the FAQ at [http
 
 ## Our Vision
 
-At **cretex**, we strive to empower developers tools that enhance creativity and productivity. By fostering an inclusive, collaborative, and optimistic environment, we aim to not only build exceptional tools but also create a space where developers feel inspired and valued.
+At **xuxi**, we strive to empower developers tools that enhance creativity and productivity. By fostering an inclusive, collaborative, and optimistic environment, we aim to not only build exceptional tools but also create a space where developers feel inspired and valued.
 
 Together, let’s push the boundaries of innovation and build a better future for application development.
 
