--- a/md/started.mdx
+++ b/md/started.mdx
@@ -6,18 +6,18 @@ date: 2025-02-03
 # **Getting Started**
 
 <div align="center">
-  <img src="https://raw.githubusercontent.com/ilkhoeri/cretex/c49a661ab84bf2f9cdf4fed2d2f4016361135362/logo.svg" width="200px" align="center" alt="Cretex logo" />
+  <img src="https://raw.githubusercontent.com/ilkhoeri/xuxi/e0667835d62fcbf1f2e216dbb79ecf28565c571c/logo.svg" width="200px" align="center" alt="Xuxi logo" />
 </div>
 
 <br />
 
 ## **Introduction**
 
-**Cretex** is a powerful utility designed to simplify **API response handling**, **complex data serialization**, **style management**, and other dynamic properties. By providing a flexible and efficient approach, Cretex helps developers manage data and structures with ease based on runtime conditions.
+**Xuxi** is a powerful utility designed to simplify **API response handling**, **complex data serialization**, **style management**, and other dynamic properties. By providing a flexible and efficient approach, Xuxi helps developers manage data and structures with ease based on runtime conditions.
 
-Cretex provides a powerful yet intuitive way to structure and combine values dynamically, making it an essential tool for both frontend and backend development.
+Xuxi provides a powerful yet intuitive way to structure and combine values dynamically, making it an essential tool for both frontend and backend development.
 
-Whether you're managing **API responses**, **dynamic class names**, or **nested object structures**, Cretex helps eliminate unnecessary values, ensure proper data flow, and maintain clean, optimized outputs with minimal effort.
+Whether you're managing **API responses**, **dynamic class names**, or **nested object structures**, Xuxi helps eliminate unnecessary values, ensure proper data flow, and maintain clean, optimized outputs with minimal effort.
 
 ---
 
@@ -25,7 +25,7 @@ Whether you're managing **API responses**, **dynamic class names**, or **nested 
 
 ---
 
-### **What Cretex can do:**
+### **What Xuxi can do:**
 
 – **Cleanly** concatenate strings.
 – **Deeply** concatenate objects.
@@ -34,31 +34,31 @@ Whether you're managing **API responses**, **dynamic class names**, or **nested 
 – **Chaining** capabilities.
 – Can run in **various runtime** conditions.
 
-### **How Can Cretex Help You?**
+### **How Can Xuxi Help You?**
 
-With Cretex, you no longer have to worry about redundant values in API responses, inefficient data structures, or overly complex condition-based styling. Cretex takes care of these problems **automatically**, allowing you to focus on building great applications.
+With Xuxi, you no longer have to worry about redundant values in API responses, inefficient data structures, or overly complex condition-based styling. Xuxi takes care of these problems **automatically**, allowing you to focus on building great applications.
 
-Cretex is an **open-source, community-driven** utility. It is built with extensibility in mind, encouraging contributions and improvements. Whether you're a **backend engineer**, **frontend developer**, or **full-stack builder**, Cretex can significantly streamline your workflow.
+Xuxi is an **open-source, community-driven** utility. It is built with extensibility in mind, encouraging contributions and improvements. Whether you're a **backend engineer**, **frontend developer**, or **full-stack builder**, Xuxi can significantly streamline your workflow.
 
-## **Why Use Cretex?**
+## **Why Use Xuxi?**
 
 ### **🚀 Versatile & Dynamic**
 
-Cretex is designed to work in multiple scenarios, including API data transformation, UI styling, and configuration management. Its dynamic chaining and flexible input handling make it a valuable tool for any development workflow.
+Xuxi is designed to work in multiple scenarios, including API data transformation, UI styling, and configuration management. Its dynamic chaining and flexible input handling make it a valuable tool for any development workflow.
 
 ### **🔄 Optimized & Efficient**
 
-By automatically filtering out unwanted values and merging data intelligently, Cretex reduces unnecessary computations and improves performance, ensuring that only meaningful values are retained.
+By automatically filtering out unwanted values and merging data intelligently, Xuxi reduces unnecessary computations and improves performance, ensuring that only meaningful values are retained.
 
 ### **🌐 Universal Compatibility**
 
-- **Supports both frontend & backend development** – Cretex can be used in any JavaScript or TypeScript environment, including Node.js, Next.js, React, and more.
-- **Compatible with various module systems** – Cretex supports **ESM (ECMAScript Modules)** and **CJS (CommonJS)**, making it easy to integrate into modern and legacy projects.
+- **Supports both frontend & backend development** – Xuxi can be used in any JavaScript or TypeScript environment, including Node.js, Next.js, React, and more.
+- **Compatible with various module systems** – Xuxi supports **ESM (ECMAScript Modules)** and **CJS (CommonJS)**, making it easy to integrate into modern and legacy projects.
 - **Optimized for modern JavaScript** – Compiled with `"lib": ["ES2020", "es5", "es6", "es7", "esnext", "dom"]` and targeting **ES2018**, ensuring broad compatibility without sacrificing modern optimizations.
 
 ### **🔧 Simple API, Powerful Features**
 
-Cretex offers a concise API that is easy to use while maintaining the flexibility to handle **deep object structures, nested arrays, and function-based value resolution**. Its intuitive design allows developers to manage data dynamically without unnecessary complexity.
+Xuxi offers a concise API that is easy to use while maintaining the flexibility to handle **deep object structures, nested arrays, and function-based value resolution**. Its intuitive design allows developers to manage data dynamically without unnecessary complexity.
 
 ## **Core Features**
 
@@ -83,10 +83,10 @@ Cretex offers a concise API that is easy to use while maintaining the flexibilit
 
 ---
 
-### **Cretex: Built for Modern Development**
+### **Xuxi: Built for Modern Development**
 
-Cretex is not just a utility—it is a **foundation** for structured, efficient, and maintainable code. Whether you're building a **scalable API**, a **reactive UI framework**, or **managing complex data flows**, Cretex provides the tools to make development smoother and more intuitive.
+Xuxi is not just a utility—it is a **foundation** for structured, efficient, and maintainable code. Whether you're building a **scalable API**, a **reactive UI framework**, or **managing complex data flows**, Xuxi provides the tools to make development smoother and more intuitive.
 
-Now that you understand what Cretex is and why it's beneficial, let’s dive deeper into **installation**, **usage**, and **real-world examples** to see how Cretex can improve your development experience!
+Now that you understand what Xuxi is and why it's beneficial, let’s dive deeper into **installation**, **usage**, and **real-world examples** to see how Xuxi can improve your development experience!
 
-🚀 **Get started today and experience the power of Cretex!** 🚀
+🚀 **Get started today and experience the power of Xuxi!** 🚀
