--- a/md/index.mdx
+++ b/md/index.mdx
@@ -9,7 +9,7 @@ date: 2025-02-03
 
 <br />
 
-# **Welcome to CXuxiretex**
+# **Welcome to Xuxi**
 
 **Xuxi** is a powerful and flexible utility designed to simplify dynamic data management. Whether you're working with **API responses**, **complex serialization**, **dynamic styles**, or **structured data merging**, Xuxi provides an efficient and elegant solution.
 
