--- a/md/started.mdx
+++ b/md/started.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started
-date: 2025-02-03
+date: 2025-05-05
 ---
 
 # **Getting Started**
@@ -89,4 +89,4 @@ Xuxi is not just a utility—it is a **foundation** for structured, efficient, a
 
 Now that you understand what Xuxi is and why it's beneficial, let’s dive deeper into **installation**, **usage**, and **real-world examples** to see how Xuxi can improve your development experience!
 
-🚀 **Get started today and experience the power of Xuxi!** 🚀
+> 🚀 <br/> **Get started today and experience the power of Xuxi!**
