--- a/md/toc.mdx
+++ b/md/toc.mdx
@@ -25,6 +25,22 @@ date: 2025-05-05
   - [Using a CDN](/installation#using-a-cdn)
     - [UMD (Global Script)](/installation#umd-global-script)
     - [ESM (Module Import)](/installation#esm-module-import)
+- [**cnx**](/cnx#cnx)
+  - [Syntax](/cnx#syntax)
+  - [How cnx works](/cnx#how-cnx-works)
+  - [Example Usage](/cnx#example-usage)
+    - [Basic Merging](/cnx#basic-merging)
+    - [Complex Merging](/cnx#complex-merging)
+    - [Ignored Falsy](/cnx#ignored-falsy)
+  - [Advantages](/cnx#advantages)
+  - [Merge class tailwind-merge](/cnx#merge-class-tailwind-merge)
+  - [IntelliSense](/cnx#intellisense)
+- [**cvx**](/cvx#cvx)
+  - [Syntax](/cvx#syntax)
+  - [How cvx works](/cvx#how-cvx-works)
+  - [Example Usage](/cvx#example-usage)
+  - [Advantages](/cvx#advantages)
+  - [IntelliSense](/cvx#intellisense)
 - [**ocx**](/ocx#ocx)
   - [Syntax](/ocx#syntax)
   - [How ocx works](/ocx#how-ocx-works)
@@ -48,22 +64,20 @@ date: 2025-05-05
       - [4. Symbol in Nested Objects](/ocx#4-symbol-in-nested-objects)
       - [5. Symbol in Node.js (util.inspect.custom)](/ocx#5-symbol-in-nodejs-utilinspectcustom)
   - [Advantages](/ocx#advantages)
-- [**cvx**](/cvx#cvx)
-  - [Syntax](/cvx#syntax)
-  - [How cvx works](/cvx#how-cvx-works)
-  - [Example Usage](/cvx#example-usage)
-  - [Advantages](/cvx#advantages)
-  - [IntelliSense](/cvx#intellisense)
-- [**cnx**](/cnx#cnx)
-  - [Syntax](/cnx#syntax)
-  - [How cnx works](/cnx#how-cnx-works)
-  - [Example Usage](/cnx#example-usage)
-    - [Basic Merging](/cnx#basic-merging)
-    - [Complex Merging](/cnx#complex-merging)
-    - [Ignored Falsy](/cnx#ignored-falsy)
-  - [Advantages](/cnx#advantages)
-  - [Merge class tailwind-merge](/cnx#merge-class-tailwind-merge)
-  - [IntelliSense](/cnx#intellisense)
+    - [rem dan em](/converter#rem-dan-em)
+      - [Syntax](/converter#syntax)
+      - [Parameters](/converter#parameters)
+      - [Details](/converter#details)
+      - [Example of Usage](/converter#example-of-usage)
+    - [px](/converter#px)
+      - [Syntax](/converter#syntax)
+      - [Parameters](/converter#parameters)
+      - [Example of Usage](/converter#example-of-usage)
+    - [createConverter](/converter#createconverter)
+      - [Syntax](/converter#syntax)
+      - [Parameters](/converter#parameters)
+      - [Example of Usage](/converter#example-of-usage)
+    - [Advantages and Optimizations](/converter#advantages-and-optimizations)
 - [**clean**](/clean#clean)
   - [Syntax](/clean#syntax)
     - [How clean Works](/clean#how-clean-works)
@@ -76,6 +90,8 @@ date: 2025-05-05
     - [Excluding Specific Values](/clean#excluding-specific-values)
   - [Advantages](/clean#advantages)
 - [**Types**](/types#types)
+  - [cvxVariants](/types#cvxvariants)
+    - [Syntax](/types#syntax)
   - [InferType](/types#infertype)
     - [Syntax](/types#syntax)
     - [How InferType Works](/types#how-infertype-works)
@@ -95,17 +111,14 @@ date: 2025-05-05
   - [Targeting ES2020](/exported#targeting-es2020)
 - [**License**](/license#license)
 - [**CHANGELOG**](/changelog#changelog)
-  - [v0.0.45](/changelog#0045---2025-02-04)
+  - [v1.0.0](/changelog#100---2025-05-05)
     - [Enhancements](/changelog#enhancements)
     - [Documentation](/changelog#documentation)
     - [Summary](/changelog#summary)
-  - [v0.0.4](/changelog#004---2025-01-31)
     - [Changed](/changelog#changed)
       - [Refactored](/changelog#refactored)
     - [Removed](/changelog#removed)
-  - [v0.0.3](/changelog#003---2025-01-29)
-    - [Changed](/changelog#changed)
-  - [v0.0.2](/changelog#002---2025-01-29)
+  - [v0.1.0](/changelog#010---2025-05-04)
     - [Added](/changelog#added)
     - [Changed](/changelog#changed)
     - [Removed](/changelog#removed)
@@ -129,3 +142,8 @@ date: 2025-05-05
   - [Attribution](/coc#attribution)
   - [Our Vision](/coc#our-vision)
 - [**Links**](/links#links)
+  - [Documentation](/links#documentation)
+  - [Repository](/links#repository)
+  - [Installation](/links#installation)
+  - [Bundles](/links#bundles)
+  - [Score and Test](/links#score-and-test)
