--- a/md/links.mdx
+++ b/md/links.mdx
@@ -1,18 +1,37 @@
 ---
 title: Links
-date: 2025-02-02
+date: 2025-05-05
 ---
 
 # **Links**
 
-[![Xuxi CI status](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml/badge.svg?event=push&branch=main)](https://github.com/ilkhoeri/xuxi/actions?query=branch%3Amain)
+## **Documentation**
 
-[![License](https://img.shields.io/github/license/ilkhoeri/xuxi)](https://opensource.org/licenses/MIT)
+[![Documentation](https://img.shields.io/badge/Docs-3b3b3b.svg?logo=github)](https://ilkhoeri.github.io/xuxi/)
+[![jsdelivr](https://img.shields.io/jsdelivr/npm/hm/xuxi?logo=jsdelivr)](https://www.jsdelivr.com/package/npm/xuxi)
+
+## **Repository**
 
 [![Repository](https://img.shields.io/badge/created%20by-@ilkhoeri-4bbaab.svg?logo=github)](https://github.com/ilkhoeri/xuxi)
-
 [![Issues](https://img.shields.io/badge/Issues-red.svg?label=%F0%9F%90%9E)](https://github.com/ilkhoeri/xuxi/issues/new)
-
 [![Changelog](https://img.shields.io/badge/Changelog-green.svg?label=%F0%9F%93%91)](/changelog)
+[![License](https://img.shields.io/github/license/ilkhoeri/xuxi)](https://opensource.org/licenses/MIT)
 
-[![UI by ilkhoeri](https://img.shields.io/badge/@ilkhoeri-4bbaab.svg?label=%E2%9C%A8%20UI%20by)](https://oeri.vercel.app)
+## **Installation**
+
+[![NPM](https://img.shields.io/npm/v/xuxi.svg?logo=npm&logoColor=white&labelColor=cc3534)](https://www.npmjs.com/package/xuxi)
+[![JSR](https://jsr.io/badges/@xuxi/xuxi?label=jsr)](https://jsr.io/@xuxi/xuxi)
+[![DENO](https://img.shields.io/npm/v/xuxi.svg?logo=deno&logoColor=white&logoSize=auto&label=%20deno&labelColor=blue&color=white)](https://deno.land/x/xuxi)
+[![jsdelivr](https://img.shields.io/npm/v/xuxi.svg?logo=jsdelivr&label=jsdelivr&color=fdC72e)](https://www.jsdelivr.com/package/npm/xuxi)
+
+## **Bundles**
+
+[![min](https://badgen.net/bundlephobia/min/xuxi)](https://bundlephobia.com/package/xuxi)
+[![minzip](https://badgen.net/bundlephobia/minzip/xuxi)](https://bundlephobia.com/package/xuxi)
+[![dependency-count](https://badgen.net/bundlephobia/dependency-count/xuxi)](https://bundlephobia.com/package/xuxi)
+[![tree-shaking](https://badgen.net/bundlephobia/tree-shaking/xuxi)](https://bundlephobia.com/package/xuxi)
+
+## **Score and Test**
+
+[![JSR Score](https://jsr.io/badges/@xuxi/xuxi/score?label=score)](https://jsr.io/@xuxi/xuxi)
+[![test](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml/badge.svg)](https://github.com/ilkhoeri/xuxi/actions/workflows/test.yml)
