--- a/md/ocx.mdx
+++ b/md/ocx.mdx
@@ -122,14 +122,15 @@ const userOverride = {
 
 const response = ocx(userBase, userOverride);
 
-console.log(response);
-// { id: 123, name: 'Alice', settings: { theme: 'light' } }
+console.log(response); // { id: 123, name: 'Alice', settings: { theme: 'light' } }
 ```
 
 ### Complex API Response Combination with additional data
 
+<br />
+
 <details>
-<summary>Examples inputs</summary>
+<summary><b>Examples Inputs :</b></summary>
 
 ```ts
 const user = {
