--- a/md/started.mdx
+++ b/md/started.mdx
@@ -89,4 +89,4 @@ Xuxi is not just a utility—it is a **foundation** for structured, efficient, a
 
 Now that you understand what Xuxi is and why it's beneficial, let’s dive deeper into **installation**, **usage**, and **real-world examples** to see how Xuxi can improve your development experience!
 
-> 🚀 <br/> **Get started today and experience the power of Xuxi!**
+> 🍣 <br/> _Get started today and experience the power of Xuxi!_
