--- a/md/ocx.mdx
+++ b/md/ocx.mdx
@@ -129,8 +129,8 @@ console.log(response); // { id: 123, name: 'Alice', settings: { theme: 'light' }
 
 <br />
 
-<details>
-<summary><b>Examples Inputs :</b></summary>
+<details className="my-4">
+<summary className="*:select-none select-none cursor-pointer"><b>Examples Inputs :</b></summary>
 
 ```ts
 const user = {
@@ -469,8 +469,8 @@ const apiResponse = x.ocx(
 console.log(JSON.stringify(apiResponse, (_, value) => value, 2));
 ```
 
-<details>
-<summary><b>Result:</b></summary>
+<details className="my-4">
+<summary className="*:select-none select-none cursor-pointer"><b>Result:</b></summary>
 
 ```json
 {
@@ -965,8 +965,8 @@ const serialized = data.map(item =>
 console.log(serialized);
 ```
 
-<details>
-<summary><b>Result:</b></summary>
+<details className="my-4">
+<summary className="*:select-none select-none cursor-pointer"><b>Result:</b></summary>
 
 ```json
 [
